--- a/skin/less.less
+++ b/skin/less.less
@@ -1,8 +1,8 @@
 @black: #333;
 
 #less_wrapper {
-	background-color: #333;
-	border-color: #333;
+	background-color: @black;
+	border-color: @black;
 	padding: 0;
 	-moz-appearance: none;
 	#less_auto {
