--- a/skin/less.css
+++ b/skin/less.css
@@ -1,23 +1,42 @@
-#less_wrapper {
-  background-color: #333;
-  border-color: #333;
-  padding: 0;
-  -moz-appearance: none;
-}
-#less_wrapper #less_auto {
-  max-width: 270px;
-  width: 270px;
-  margin: 0;
-  padding: 0;
-}
+/* Yes these 2 are not colors, doesnt warrant a rename at this time */
+/* Main Window */
+/* Elements */
+/* Special Elements */
+/* Widgets */
+/* SCC */
+/* Misc */
 #statusbar-less #statusbar-less-label {
   min-width: 70px;
 }
 #statusbar-less #statusbar-less-label > label {
-  background-image: url('../content/komodo-less.png');
+  background-image: url('../content/komodo-less.png') !important;
   background-repeat: no-repeat;
   background-position: 0px 4px;
   background-size: auto 11px;
   padding-left: 30px;
   padding-right: 10px;
+}
+prefwindow,
+prefwindow:root {
+  -moz-binding: url("chrome://global/content/bindings/preferences.xml#prefwindow");
+}
+.pref-window:not(dialog):not(#prefWindow):not(#prefProjectsWindow) > vbox,
+.pref-window:not(dialog):not(#prefWindow):not(#prefProjectsWindow) > hbox,
+.pref-window:not(dialog):not(#prefWindow):not(#prefProjectsWindow) > box {
+  padding: 10px;
+}
+prefwindow > prefpane {
+  padding: 10px;
+}
+h3 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+prefwindow #less-filescopes-pane label {
+  padding: 3px;
+  font-weight: bold;
+}
+prefwindow #less-filescopes-pane strong {
+  font-weight: bold;
+  font-size: 14px;
 }
