autocompletion function is back and added notification options

--- a/skin/less.css
+++ b/skin/less.css
@@ -5,6 +5,18 @@
 /* Widgets */
 /* SCC */
 /* Misc */
+#less_wrapper {
+  background-color: #333;
+  border-color: #333;
+  padding: 0;
+  -moz-appearance: none;
+}
+#less_wrapper #less_auto {
+  max-width: 270px;
+  width: 270px;
+  margin: 0;
+  padding: 0;
+}
 #statusbar-less #statusbar-less-label {
   min-width: 70px;
 }
