improved popup and fixed #4

--- a/skin/less.less
+++ b/skin/less.less
@@ -1,10 +1,10 @@
 @import url("chrome://komodo/skin/global/colors.less");
 @import url("resource://profile/colors.less"); 
-@black: #333;
+
 
 #less_wrapper {
-	background-color: @black;
-	border-color: @black;
+	background-color: @background;
+	border-color: @background;
 	padding: 0;
 	-moz-appearance: none;
 	#less_auto {
@@ -19,7 +19,7 @@
 	#statusbar-less-label {
 		min-width: 70px;
 		> label {
-			background-image: url('../content/komodo-less.png') !important;
+			background-image: url('chrome://less/content/komodo-less.png') !important;
 			background-repeat: no-repeat;
 			background-position: 0px 4px;
 			background-size: auto 11px;
