--- a/skin/less.css
+++ b/skin/less.css
@@ -6,8 +6,8 @@
 /* SCC */
 /* Misc */
 #less_wrapper {
-  background-color: #333;
-  border-color: #333;
+  background-color: #3c3f41;
+  border-color: #3c3f41;
   padding: 0;
   -moz-appearance: none;
 }
@@ -21,7 +21,7 @@
   min-width: 70px;
 }
 #statusbar-less #statusbar-less-label > label {
-  background-image: url('../content/komodo-less.png') !important;
+  background-image: url('chrome://less/content/komodo-less.png') !important;
   background-repeat: no-repeat;
   background-position: 0px 4px;
   background-size: auto 11px;
