--- a/skin/less.less
+++ b/skin/less.less
@@ -1,10 +1,11 @@
 @import url("chrome://komodo/skin/global/colors.less");
 @import url("resource://profile/colors.less"); 
 
+@test: #333;
 
 #less_wrapper {
-	background-color: @background;
-	border-color: @background;
+	background-color: darken(@background, 4%);
+	border-color: darken(@background, 4%);
 	padding: 0;
 	-moz-appearance: none;
 	#less_auto {
@@ -12,6 +13,15 @@
 		width: 270px;
 		margin: 0;
 		padding: 0;
+		background-color: darken(@background, 4%);
+		border-color: darken(@background, 4%);
+		popupset,
+		panel,
+		tree,
+		treerows {
+			background-color: darken(@background, 4%) !important;
+			border-color: darken(@background, 4%) !important;
+		}
 	}
 }
 
